# random_forest-airport_type_classification

./: .gitignore  Project_Presentation.pptx  README.md  markdown.md  requirements.txt  setup.cfg
docs/: documentation.md
experiments/: experiments.md
src/airport_random_forest/: __init__.py  main.py
tests/: test_basic.py
