[metadata]
name = airport_random_forest
version = 0.1.0
description = Simple Random Forest implementation for airport classification
author = Wojciech Domino & Mateusz Maj
author_email = wojtekdomino@student.agh.edu.pl
license = MIT
url = https://github.com/wojtekdomino/random_forest-airport_type_classification
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts =
    --verbose
